docs-archive/apache-airflow-providers-airbyte/3.2.0/_sources/_api/airflow/providers/airbyte/sensors/airbyte/index.rst.txt
:py:mod:`airflow.providers.airbyte.sensors.airbyte`
===================================================

.. py:module:: airflow.providers.airbyte.sensors.airbyte

.. autoapi-nested-parse::

   This module contains a Airbyte Job sensor.



Module Contents
---------------

Classes
~~~~~~~

.. autoapisummary::

   airflow.providers.airbyte.sensors.airbyte.AirbyteJobSensor




.. py:class:: AirbyteJobSensor(*, airbyte_job_id, airbyte_conn_id = 'airbyte_default', api_version = 'v1', **kwargs)

   Bases: :py:obj:`airflow.sensors.base.BaseSensorOperator`

   Check for the state of a previously submitted Airbyte job.

   :param airbyte_job_id: Required. Id of the Airbyte job
   :param airbyte_conn_id: Required. The name of the Airflow connection to get
       connection information for Airbyte.
   :param api_version: Optional. Airbyte API version.

   .. py:attribute:: template_fields
      :type: Sequence[str]
      :value: ('airbyte_job_id',)

      

   .. py:attribute:: ui_color
      :value: '#6C51FD'

      

   .. py:method:: poke(context)

      Function defined by the sensors while deriving this class should override.



